tests/baselines/reference/indirectSelfReference.errors.txt
==== tests/cases/compiler/indirectSelfReference.ts (1 errors) ====
    class a extends b{ }
          ~
!!! indirectSelfReference.ts(1,7): error TS2100: Type 'a' recursively references itself as a base type.
    class b extends a{ }